--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html>
-    <head>
-
-    </head>
-    <body>
-        
-    </body>
-
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <img src="file:///Users/dave/Desktop/Vision%20Algos/Internship/Website/Images/Vision%20Algorithms%20logo%20reduced.png">
+    <h1>Vision Algos</h1>
+</body>
 </html>
